--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "vrf-redirect",
   "version": "0.0.1",
   "description": "Vrf effect for redirection to the created resource page",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc ./src/index.ts --outDir ./lib --target es6 --moduleResolution node",
+    "build": "npx webpack build",
     "pub": "npm run build && npm publish"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
-    "vrf": "^0.50.1-effects.4"
+    "vrf": "^0.50.1-effects.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "url-join": "^4.0.1"
